# Beal-Conjecture-Diophantine-Engine

./: LICENSE  README.md  goliath.sh  goliath_engine.sh
hyper_goliath/: CMakeLists.txt  README.md
hyper_goliath/configs/: G1_4_5_6.md  G2_3_4_11.md  G3_3_5_7.md  G4_3_4_13.md  G5_5_6_7.md
hyper_goliath/include/: hyper_goliath.h
hyper_goliath/logs/: atlas_3_3_4.jsonl  atlas_3_3_5.jsonl  elite_3_4_11_500k.jsonl  elite_3_4_13_500k.jsonl  elite_3_5_7_500k.jsonl  elite_4_5_6.jsonl  elite_5_6_7_500k.jsonl  million_4_5_6.jsonl
hyper_goliath/scripts/: build.sh  cross_validate.py  integrity_audit.py  verify_proof.py
hyper_goliath/src/: gmp_verify.c  logging.c  main.c  parallel.c  precompute.c  sieve.c  utils.c
hyper_goliath/tests/: export_survivors.c  test_sieve.c
